syntax = "proto3";
package matcha.view.android;
import "github.com/gomatcha/matcha/proto/image.proto";
import "github.com/gomatcha/matcha/proto/text/text.proto";

option go_package = "android";
option objc_class_prefix = "MatchaAndroidPB";
option java_package = "com.github.gomatcha.matcha.proto.view.android";
option java_outer_classname = "PbStackView";

message StackChildView {
    int64 screenId = 3;
}

message StackView {
    repeated StackChildView children = 1;
}

message StackBar {
    string title = 1;
    matcha.text.StyledText styledTitle = 6;
    string subtitle = 3;
    matcha.text.StyledText styledSubtitle = 7;
    matcha.Color color = 4;
    repeated StackBarItem items = 5;
    bool backButtonHidden = 2;
}

message StackBarItem {
    string title = 1;
    matcha.text.StyledText styledTitle = 6;
    matcha.ImageOrResource icon = 3;
    matcha.Color iconTint = 2;
    bool disabled = 4;
    string onPressFunc = 5;
}

message StackEvent {
    repeated int64 id = 1;
}
