syntax = "proto3";
package matcha.view.ios;
import "github.com/gomatcha/matcha/proto/image.proto";
import "github.com/gomatcha/matcha/proto/text/text.proto";

option go_package = "ios";
option objc_class_prefix = "MatchaiOSPB";
option java_package = "com.github.gomatcha.matcha.proto.view.ios";
option java_outer_classname = "PbStackView";

message StackChildView {
    int64 screenId = 3;
}

message StackView {
    repeated StackChildView children = 1;
    matcha.text.TextStyle titleTextStyle = 2;
    matcha.text.TextStyle backTextStyle = 3;
    matcha.Color barColor = 4;
    matcha.Color itemColor = 5;
}

message StackBar {
    string title = 1;
    bool backButtonHidden = 7;
    bool customBackButtonTitle = 2;
    string backButtonTitle = 3;
    bool hasTitleView = 4;
    int64 rightViewCount = 5;
    int64 leftViewCount = 6;
    repeated StackBarItem rightItems = 8;
    repeated StackBarItem leftItems = 9;
}

message StackEvent {
    repeated int64 id = 1;
}

message StackBarItem {
    bool enabled = 3;
    matcha.Color  tintColor = 4;
    string title = 1;
    matcha.text.TextStyle titleStyle = 5;
    matcha.ImageOrResource image = 2;
    bool tintsImage = 6;
    string onPress = 7;
}
